# telegram-bot-api-proxy

./: .dockerignore  .gitignore  Cargo.toml  docker-compose.yml
.docker/app/: Dockerfile
.github/workflows/: docker-publish.yml
src/: main.rs
src/config/: mod.rs
src/handlers/: mod.rs  route.rs
